--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
     <link rel='stylesheet' type='text/css' media='screen' href='./libs/bootstrap/bootstrap.min.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./libs/fullpage/fullpage.min.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./libs/fancybox/fancybox.min.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./libs/selectric/selectric.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./libs/slick/slick.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./css/main.min.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/main.min.css'>
 </head>
 <body>
@@ -252,6 +255,8 @@
 <script src="./libs/jquery/jquery.min.js"></script>
 <script src="./libs/fullpage/fullpage.min.js"></script>
 <script src="./libs/fancybox/fancybox.js"></script>
+<script src="./libs/selectric/selectric.min.js"></script>
+<script src="./libs/slick/slick.min.js"></script>
 <script src="./js/main.js"></script>
 </body>
 </html>
