--- a/src/history.html
+++ b/src/history.html
@@ -210,6 +210,16 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="history__bot">
+                            <div class="history__bot__item">
+                                <div>Адрес доставки: <span>г. Москва ул. Центральная</span></div>
+                                <div>Дата заказа: <span>25. 09. 2020 г</span></div>
+                            </div>
+                            <div class="history__bot__item2">
+                                <div><span>Доставка:</span>900 руб</div>
+                                <div><span>Итого:</span>3900 руб</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
