--- a/src/cabinet.html
+++ b/src/cabinet.html
@@ -203,7 +203,7 @@
                                     <div class="cabinet__price-r">
                                         <div>3000 руб</div>
                                         <button class="cabinet-povtor">
-                                            <img src="./img/cabinet/povtor.svg">повторить заказ
+                                            <img src="./img/cabinet/povtor.svg"><span>повторить заказ</span>
                                         </button>
                                     </div>
                                 </div>
@@ -216,7 +216,7 @@
                                     <div class="cabinet__price-r">
                                         <div>3000 руб</div>
                                         <button class="cabinet-povtor">
-                                            <img src="./img/cabinet/povtor.svg">повторить заказ
+                                            <img src="./img/cabinet/povtor.svg"><span>повторить заказ</span>
                                         </button>
                                     </div>
                                 </div>
@@ -229,7 +229,7 @@
                                     <div class="cabinet__price-r">
                                         <div>3000 руб</div>
                                         <button class="cabinet-povtor">
-                                            <img src="./img/cabinet/povtor.svg">повторить заказ
+                                            <img src="./img/cabinet/povtor.svg"><span>повторить заказ</span>
                                         </button>
                                     </div>
                                 </div>
