--- a/src/cabinet.html
+++ b/src/cabinet.html
@@ -183,6 +183,7 @@
                                 </button>
                             </div>
                             <button type="button" class="adressa__add"><span>+</span> добавить новый адрес</button>
+                            <div class="skidka">Ваша скидка: 5%</div>
                         </div>
                     </div>
                     <div class="cabinet__right">
