--- a/src/tovar.html
+++ b/src/tovar.html
@@ -161,7 +161,12 @@
                     <div class="tovar__wrap">
                         <div class="tovar-cart">
                             <div class="big-cart">
-                                <a data-fancybox="t-img" href="./img/tovar/video.mp4" class="big-cart__item video" style="background-image: url(./img/tovar/cart.jpg);"></a>
+                                <div  href="./img/tovar/video.mp4" class="big-cart__item video">
+                                    <video id="big-cart-video" autoplay="" muted="" playsinline="">
+                                        <source src="./img/tovar/video.mp4" type="video/mp4">
+                                    </video>
+                                    <div class="video-btn"></div>
+                                </div>
                                 <a data-fancybox="t-img" href="./img/tovar/cart.jpg" class="big-cart__item" style="background-image: url(./img/tovar/cart.jpg);"></a>
                                 <a data-fancybox="t-img" href="./img/tovar/cart.jpg" class="big-cart__item" style="background-image: url(./img/tovar/cart.jpg);"></a>
                                 <a data-fancybox="t-img" href="./img/tovar/cart.jpg" class="big-cart__item" style="background-image: url(./img/tovar/cart.jpg);"></a>
